
- Bug #841757: xmlrpclib failed on structs with Unicode keys.

- Bug #954364: inspect.getframeinfo() sometimes produces incorrect traceback
  line numbers

- Patch #909007: Enable a bunch of safe bug workarounds in OpenSSL, for
  the sake of compatibility with various broken SSL implementations.

- Patch #945642: Fix non-blocking SSL sockets, which blocked on reads/writes.

Library
-------

- Bug #1039270: Locale data is now escaped for regex metacharacters.

- Bug #807871: Fix tkMessageBox.askyesno result.

- Patch #1014992: In tarfile.readline, never return more than a line.

- Bug #1013882: Flush bz2 data even if nothing had been written so far.

- Patch #997284: Allow pydoc to work with XP Themes (.manifest file)

- Patch #808719: Ignore locale's encoding in IDLE if it is an empty string.

- Patch #946153: Add wait_visibility before grab_set.

- Patch #994595: urllib2 now recognizes Basic authentication even if
  other authentication schemes are offered.

- Bug #993394.  A KeyError was being raised by Thread.__delete() for
  dummy_threading when called by atexit if an instance of Thread was created in
  an interpreter running in -O.  The exception was of no importance and thus is
  now thrown away if raised.

- Bug #930024: posixpath.realpath() now detects loops from symlinks and returns
  the longest path before the loop begins.

- Bug #980327/Patch #988607: ntpath now compresses extra slashes between the
  drive letter and the rest of the path properly.  Also removed ambiguity from
  UNC paths.  Thanks Paul Moore.

- Bug #679953: zipfile can now handle file sizes over 2 GB.  Previously the
  compressed and uncompressed file sizes were being stored as signed longs
  instead of unsigned as the ZIP spec specifies.
  
- Bug #981530: Fix UnboundLocalError in shutil.rmtree().  This affects
  the documented behavior: the function passed to the onerror()
  handler can now also be os.listdir.
