@@ -235,11 +235,11 @@ specification, and are replaced by the indicated characters in the
   \lineiii{\%S}{Second as a decimal number [00,61].}{(1)}
   \lineiii{\%U}{Week number of the year (Sunday as the first day of the
                 week) as a decimal number [00,53].  All days in a new year
-                preceding the first Sunday are considered to be in week 0.}{}
+                preceding the first Sunday are considered to be in week 0.}{(2)}
   \lineiii{\%w}{Weekday as a decimal number [0(Sunday),6].}{}
   \lineiii{\%W}{Week number of the year (Monday as the first day of the
                 week) as a decimal number [00,53].  All days in a new year
-                preceding the first Monday are considered to be in week 0.}{}
+                preceding the first Monday are considered to be in week 0.}{(2)}
   \lineiii{\%x}{Locale's appropriate date representation.}{}
   \lineiii{\%X}{Locale's appropriate time representation.}{}
   \lineiii{\%y}{Year without century as a decimal number [00,99].}{}
@@ -255,6 +255,10 @@ Notes:
   \item[(1)]
     The range really is \code{0} to \code{61}; this accounts for leap
     seconds and the (very rare) double leap seconds.
+  \item[(2)]
+    When used with the \function{strptime()} function, \code{\%U} and \code{\%W}
+    are only used in calculations when the day of the week and the year are
+    specified.
 \end{description}
 
 Here is an example, a format for dates compatible with that specified 
